--- a/.github/workflows/wakeup.yml
+++ b/.github/workflows/wakeup.yml
@@ -2,35 +2,39 @@ name: Keep Backend Awake
 
 on:
   schedule:
-    # 15 นาทีระหว่าง 02:00–14:45 UTC = 09:00–21:45 Asia/Bangkok (UTC+7)
+    # 15 นาที ระหว่าง 02:00–14:45 UTC = 09:00–21:45 Asia/Bangkok
     - cron: "*/15 2-14 * * *"
-  workflow_dispatch: {}  # กดรันเองได้
+  workflow_dispatch: {}
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    strategy:
-      fail-fast: false
-      matrix:
-        endpoint:
-          # ใส่หลาย URL ได้ (เช่น /health ของ Render)
-          - "${{ secrets.WAKE_URL_1 }}"
-          # - "${{ secrets.WAKE_URL_2 }}"
     steps:
-      - name: Ping ${{ matrix.endpoint }}
+      - name: Try /health then /
         shell: bash
         run: |
           set -e
-          echo "Pinging: ${{ matrix.endpoint }}"
-          # ถ้าต้องใช้ token ให้เติม -H "Authorization: Bearer $TOKEN"
-          code=$(curl -sS -o /dev/null -w "%{http_code}" -X GET \
-            --max-time 20 --retry 2 --retry-delay 2 \
-            "${{ matrix.endpoint }}")
-          echo "HTTP $code"
-          if [[ "$code" =~ ^2|3 ]]; then
-            echo "Backend awake ✅"
-          else
-            echo "Ping failed ❌"
-            exit 1
+          BASE="${{ secrets.WAKE_URL_1 }}"
+          echo "Base URL: $BASE"
+
+          try_ping () {
+            local url="$1"
+            echo "Pinging: $url"
+            code=$(curl -sS -o /dev/null -w "%{http_code}" -X GET \
+              --max-time 20 --retry 2 --retry-delay 2 "$url")
+            echo "HTTP $code"
+            [[ "$code" =~ ^2|3 ]] && return 0 || return 1
+          }
+
+          # 1) ลอง /health ก่อน
+          if try_ping "${BASE%/}/health"; then
+            echo "Backend awake via /health ✅"; exit 0
           fi
+
+          # 2) ไม่สำเร็จ ลอง root /
+          if try_ping "${BASE%/}/"; then
+            echo "Backend awake via / ✅"; exit 0
+          fi
+
+          echo "Ping failed ❌"; exit 1
